<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.join.JoinActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_52sdp"
        android:background="@color/background_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:src="@drawable/ic_round_close_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/nunito_semi_bold"
            android:text="@string/join_hearing"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meetingLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/meeting_text_hint"
        android:layout_marginStart="@dimen/_38sdp"
        android:layout_marginEnd="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_64sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/medium_gray"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48ssp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/nunito"
        android:text="@string/name"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@id/nameLayout"
        app:layout_constraintBottom_toBottomOf="@+id/nameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_38sdp"
        android:hint="@string/name_text_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/meetingLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/optionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginEnd="@dimen/_48sdp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLayout"
        app:layout_constraintBottom_toTopOf="@id/layoutNext">

        <TextView
            android:id="@+id/optionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/nunito_semi_bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/_52sdp"
            android:layout_marginEnd="@dimen/_52sdp"
            android:background="@color/light_gray"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_8sdp"/>

        <LinearLayout
            android:id="@+id/audioLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hearing_audio"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/nunito"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/audioSwitch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:track="@drawable/switch_track_selector"
                android:thumb="@drawable/switch_thumb"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/videoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_video"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/nunito"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/videoSwitch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:track="@drawable/switch_track_selector"
                android:thumb="@drawable/switch_thumb"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/layoutNext"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:background="@drawable/background_round_next"
        android:layout_marginBottom="@dimen/_64sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/ic_round_navigate_next_24"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>