<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.meeting.MeetingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_52sdp"
        android:background="@color/background_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:src="@drawable/ic_round_close_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/nunito"
            android:text="@string/join_hearing"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/meetingLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layoutNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:padding="@dimen/_12sdp"
            android:text="@string/meeting_id"
            android:textSize="@dimen/_16ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/meetingIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12sdp"
                android:fontFamily="@font/nunito_semi_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_24ssp"
                tools:text="937 964 8755" />

            <ImageView
                android:id="@+id/btnCopy"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24ssp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_file_copy_24" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEdit"
            android:layout_width="@dimen/_64sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/btn_outline_background"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/background_blue"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layoutNext"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:background="@drawable/background_round_next"
        android:layout_marginBottom="@dimen/_64sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/ic_round_navigate_next_24"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>